alignment fix

--- a/src/components/TooLegit.css
+++ b/src/components/TooLegit.css
@@ -41,15 +41,16 @@ header {
     display:flex;
     justify-content: center;
     align-items: center;
+    letter-spacing: 10px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-letter-spacing: 1px;
+letter-spacing: 6px;
 font-size: 20px;
 font-family: 'Bebas Neue', cursive;
 font-family: 'Inter', sans-serif;
 }
 
 #root  {
-    width: 50%;
+    width: 60%;
 }
