--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,15 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter&display=swap');
 
 .navbar {
-display:flex;
-flex-direction: row;
-justify-content: space-around;
+    display: flex;
+    flex-direction: row;
 align-items:center;
 flex-wrap:nowrap;
 font-size: 1.1rem;
-height: 60px;
-position: relative;
-}
+height: 40px;
+justify-content: space-between;
+} 
 
 .navbar__item {
     display: flex;
@@ -25,8 +24,8 @@ position: relative;
     color: #0b0c0b;
     text-decoration: none;
     border: 2px solid rgb(93, 153, 93);
-    background-color: rgb(124, 170, 134);
-    padding: 6px 5px;
+    background-color: #66b66a;
+    padding: 4px 3px;
     white-space: nowrap;
     border-radius: 5px;
 }
