--- a/src/components/tasks/Tasks.css
+++ b/src/components/tasks/Tasks.css
@@ -24,7 +24,7 @@
 .list_wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
 } 
 
@@ -44,7 +44,9 @@
     line-height: .5em;
     color:black;
     background-color: #66b66a;
-    border-radius: 4px;
+    border-radius: 5px;
+    font-family: 'Bebas Neue';
+    font-family: 'Inter', sans-serif;
 }
 
 .taskForm{
@@ -77,12 +79,9 @@ font-size:large;
     font-size: 0.70rem;
     line-height: 2.5;
     font-weight: bold;
-    padding: 6px 5px;
+    padding: 10px 10px;
     white-space: nowrap;
-    }
-
-    .label-urgent {
-        text-align: right;
+    justify-content: flex-start;
     }
 
     .categorylabel-red {
@@ -114,32 +113,43 @@ font-size:large;
 
     .checkbox {
         width: 20px;
-        height: 18px;
-        margin: 4px;
-        position:inherit;
+        height: 19px;
+        margin: 7px;
         border-radius: 1px;
+        align-items: center;
+        cursor: pointer;
     }
     
 
     .btn-primary {
         background-color: #66b66a;
-        border-radius: 4px;
+        border-radius: 5px;
+        font-family: 'Bebas Neue';
+        font-family: 'Inter', sans-serif;
+        line-height: .8em;
+    }
+
+
+    .task {
+        display: flex;
+        font-size: 18px;
+        align-items: center;
+        flex-direction: row;
+        width: 43rem;
+        position: relative;
     }
 
     .icons-right {
-        text-align: left;
+        padding: 0px 5px;
+        justify-content: right;
+        position: absolute;
+        right: 2%;
     }
 
-    .task {
-        font-size: 18px;
-        display:flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        width: 43rem;
-    
+    .icons-left {
+        justify-content: left;
     }
 
     .tasktext {
-        padding: 0px 7px;
+        padding: 0px 6px;
     }
